--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Nilesh Kumar Portfolio"
+      content="MERN Stack Developer | React Developer | Frontend Developer"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
